# lvrep-rl-cloned

./: .gitignore  README.md  define_problem.py  envsdebug.py  eval.py  eval_drones.py  eval_q.py  eval_robust.ipynb  eval_v2.py  eval_v2_robust.py  ilqr_main.py  ilqr_main_pendubot.py  ilqr_main_quadrotor.py  main.py  main_drones.py  main_toolbox.py  main_transfer.py  pyproject.toml  requirements.txt  run.sbatch  run_eval.sh  run_test.sh  run_train.sh  run_train_cartpole.sh  run_train_cluster.sh  run_train_pendubot.sh  run_train_pendulum.sh  run_train_quadrotor2d.sh  run_train_v2.sh  visualize_biagt.py
agent/rfsac/: rfsac_agent.py  transfer_agent.py
agent/sac/: actor.py  critic.py  sac_agent.py
control/: og_eval_mpc_pendubot.py  og_eval_mpc_quadrotor.py
control/cost_log/: samples=80000_koopman_tr_seed=0_eval_seed=0_sigma=0.0_euler=False.npy
cost_log/: seed=0_euler=False_sigma=0.0.npy  seed=0_euler=False_sigma=1.0.npy
docs/source/: conf.py  index.rst  installation.rst  usage.rst
envs/: __init__.py  articulate.py  cart_pendulum.py  continuous_cartpole.py  custom_env.py  env_helper.py  noisy_pend.py  pendubot.py  pendulum.py  pendulum_cstr.py  quadrotor.py
envs/quad_2d_env_config/: stabilization.yaml  stabilization_eval.yaml
eval_plot_scripts/: eval.py  eval_v2.py  plot.py  plot_learning.py  plot_theta_traj.ipynb  plot_v2.py  swingup_cstr.npy  visualize_policy.py
networks/: disvae.py  new_policy.py  policy.py  vae.py
our_env/: noisy_pend.py
our_env/env_configs/: constrained_tracking.yaml  constrained_tracking_eval.yaml  stabilization.yaml  stabilization_eval.yaml
pretrained/Pendubot-v0/: KoopmanU_Pendubot-v0layer3_edim70_eloss0_gamma0.8_aloss1_samples100000_dt0.05_seed0_return_norm_th=False_sigma=0.0_euler=False.pth  KoopmanU_Pendubot-v0layer3_edim70_eloss0_gamma0.8_aloss1_samples100000_dt0.05_seed0_return_norm_th=False_sigma=1.0_euler=False.pth
repr_control/: define_problem.py  solve.py  solve_fh.py  solve_fhmb.py  solve_vec.py  verify_density.py
repr_control/agent/: actor.py  critic.py
repr_control/datasets/: datasets.py
tests/: test_custom_dynamics.py
train/: Learn_Koopman_with_KlinearEig.py
transfer/: differentiable_dynamics.py  differentiable_representation.py  transfer.ipynb  transfer.py
utility/: Utility.py
utils/: buffer.py  plot.py  plot_v2.py  util.py
(+129 files in other folders)
