[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repr-control"
version = "0.0.0-dev0"
description = "Solving nonlinear control using representation learning."
dependencies = [
    "gym == 0.25.1",
    "tensorboardx",
    "seaborn",
]
readme = "README.md"
requires-python = ">=3.8"
authors = [
  {name = "Haitong Ma", email = "haitongma@g.harvard.edu" }
]
maintainers = [
  {name = "Haitong Ma", email = "haitongma@g.harvard.edu" }
]

[project.urls]
#"Homepage" = "https://github.com/pypa/sampleproject"
#"Bug Reports" = "https://github.com/pypa/sampleproject/issues"
#"Funding" = "https://donate.pypi.org"
#"Say Thanks!" = "http://saythanks.io/to/example"
#"Source" = "https://github.com/pypa/sampleproject/"