[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repr-control"
version = "0.0.0-dev0"
description = "Solving nonlinear control using representation learning."
dependencies = [
    "gymnasium",
    "tensorboardx",
    "seaborn",
    "pytest",
    "imageio[ffmpeg]"
]
readme = "README.md"
requires-python = ">=3.8"
authors = [
  {name = "Haitong Ma", email = "haitongma@g.harvard.edu" }
]
maintainers = [
  {name = "Haitong Ma", email = "haitongma@g.harvard.edu" }
]

[project.urls]
"GitHub" = "https://github.com/CoNGHarvard/repr_control"
"Papers" = "https://arxiv.org/abs/2304.03907"
